# slant

./: Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue.md  proposal.md
.github/workflows/: crates.yml  rust.yml
anim/: Cargo.toml
anim/src/: lib.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/traits/: mod.rs
core/src/types/: mod.rs
slant/: Cargo.toml
slant/src/: lib.rs
