[workspace]
default-members = [
    "slant"
]

exclude = [

]

members = [
    "slant",
    "anim",
    "core",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
lazy_static = "1"
paste = "1"
thiserror = "1"

[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com>",]
categories = [ "mathematics", ]
description = "slant is a mathematical sandbox focused on interactive visualizations and animations."
edition = "2021"
homepage = "https://github.com/FL03/slant/wiki"
keywords = [ "animation", "math"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/slant.git"
version = "0.0.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
