[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "slant-anim"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "rand",
    "serde",
]

# ********* [FF] Dependencies *********
alloc = [
    "serde?/alloc",
    "slant-core/std",
]

rand = [
    "slant-core/rand"
]

serde = [
    "dep:serde",
    "slant-core/serde",
]

# ********* [FF] Environments *********
std = [
    "alloc",
    "slant-core/std",
]

wasm = [
    "slant-core/wasm",
]

wasi = [
    "slant-core/wasi",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dependencies.slant-core]
default-features = false
path = "../core"
version = "0.0.1"

[dev-dependencies]
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]

[target.wasm32-wasi]
