[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "slant"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "rand",
    "serde",
]

# ********* [FF] Dependencies *********
alloc = [
    "slant-anim?/alloc",
    "slant-core/std",
]

rand = [
    "slant-core/rand"
]

serde = [
    "slant-core/serde",
]

# ********* [FF] Environments *********
std = [
    "alloc",
    "slant-anim?/std",
    "slant-core/std",
]

wasm = [
    "slant-core/wasm",
]

wasi = []

# ********* [FF] Features *********
anim = [
    "dep:slant-anim",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies.slant-anim]
default-features = false
path = "../core"
version = "0.0.0"

[dependencies.slant-core]
default-features = false
path = "../core"
version = "0.0.0"

[dev-dependencies]


[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]

[target.wasm32-wasi]
